// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all bugs field present 1`] = `
{
  "email": "bugs@foobar.local",
  "url": "bugs.foobar.local",
}
`;

exports[`no bugs field present 1`] = `undefined`;

exports[`npm overrides 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "overrides": {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;

exports[`pnpm overrides 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "pnpm": {
    "overrides": {
      "other-dep": "*",
      "some-dep": "1.0.0",
    },
  },
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;

exports[`pnpm overrides in root project only, not subprojects 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "pnpm": {},
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;

exports[`pnpm overrides in root project only, not subprojects 2`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "sub-project",
  "publishConfig": {
    "access": "public",
  },
  "scripts": {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;

exports[`single bugs field present 1`] = `
{
  "email": "bugs@foobar.local",
}
`;

exports[`yarn berry resets the packageManager 1`] = `
[
  "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "",
  "nodeLinker: node-modules",
  "",
]
`;

exports[`yarn berry resets the packageManager 2`] = `
[
  "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "node_modules/",
  "!/.gitattributes",
  "!/.projen/tasks.json",
  "!/.projen/deps.json",
  "!/.projen/files.json",
  "!/.github/workflows/pull-request-lint.yml",
  "!/package.json",
  ".yarn/*",
  "!.yarn/patches",
  "!.yarn/plugins",
  "!.yarn/releases",
  "!.yarn/sdks",
  "!.yarn/versions",
  "!.yarn/cache",
  "!/.yarnrc.yml",
  "",
]
`;

exports[`yarn berry resets the packageManager 3`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "packageManager": "yarn@3.6.4",
  "publishConfig": {
    "access": "public",
  },
  "resolutions": {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "scripts": {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;

exports[`yarn berry resets the packageManager 4`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

* text=auto eol=lf
/.gitattributes linguist-generated
/.github/workflows/pull-request-lint.yml linguist-generated
/.gitignore linguist-generated
/.pnp.* binary linguist-vendored
/.projen/** linguist-generated
/.projen/deps.json linguist-generated
/.projen/files.json linguist-generated
/.projen/tasks.json linguist-generated
/.yarn/** linguist-vendored
/.yarn/plugins/**/* binary
/.yarn/releases/* binary
/.yarnrc.yml linguist-generated
/package.json linguist-generated
/yarn.lock linguist-generated"
`;

exports[`yarn resolutions 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "publishConfig": {
    "access": "public",
  },
  "resolutions": {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "scripts": {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;

exports[`yarn_berry resolutions 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "packageManager": "yarn@4.0.1",
  "publishConfig": {
    "access": "public",
  },
  "resolutions": {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "scripts": {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;

exports[`yarn_classic resolutions 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "publishConfig": {
    "access": "public",
  },
  "resolutions": {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "scripts": {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;

exports[`yarn2 resolutions 1`] = `
{
  "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
  "license": "Apache-2.0",
  "main": "lib/index.js",
  "name": "my-project",
  "packageManager": "yarn@4.0.1",
  "publishConfig": {
    "access": "public",
  },
  "resolutions": {
    "other-dep": "*",
    "some-dep": "1.0.0",
  },
  "scripts": {
    "build": "npx projen build",
    "compile": "npx projen compile",
    "default": "npx projen default",
    "eject": "npx projen eject",
    "package": "npx projen package",
    "post-compile": "npx projen post-compile",
    "pre-compile": "npx projen pre-compile",
    "test": "npx projen test",
  },
  "version": "0.0.0",
}
`;
